--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -58,7 +58,7 @@
       {{ content_for_layout }}
     </main>
 
-{%  section 'footer-group' %}
+{%  sections 'footer-group' %}
 
     {% render 'search-modal' %}
 
